--- a/aula 9 31-07/eventos-teclado.html
+++ b/aula 9 31-07/eventos-teclado.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head class="cbl">
-    <title>Eventos de Click</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="script.js" media="screen" />
-    <script src="script.js" type="text/javascript"></script>
-   
-<body>
+<html>
+<head>
+	<title>Eventos de click</title>
+	<meta charset="utf-8">
+	<script type="text/javascript">
+		
+		// onkeydown
+		// onkeypress
+		// onkeyup
 
-    <input type=""
+	</script>
+</head>
+<body>
+	<!-- <input type="text" onkeydown="alert('Uma tecla foi pressionada')"> -->
+
+	<input type="text" onkeypress="alert('Uma tecla foi pressionada, exceto CTRL, ALT, SHIFT, ESC')">	
+
+	<!-- <input type="text" onkeyup="alert('Uma tecla foi liberada')">	 -->
+</body>
+</html>
