--- a/aula 9 31-07/evento-janela.html
+++ b/aula 9 31-07/evento-janela.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head class="cbl">
-    <title>Eventos de Janela</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="script.js" media="screen" />
-    <script src="script.js" type="text/javascript"></script>
-   
-<body onload="alert('A pagina foi carregada')">
-<!--onresize=('a pagina foi redimensionada')-->
-<!--onload="alert=(a pagina foi carregada completamente)"-->
+<html>
+<head>
+	<title>Eventos Janela</title>
+	<meta charset="utf-8">
+	<script type="text/javascript">
+		
+		// onload - acionado quando a página finaliza o carregamento.
+
+		// onresize - acionado quando a página ou frame é redimencionado.
+
+	</script>
+</head>
+<!-- usado dentro do body -->
+<body  onresize="console.log('A página foi redimensionado')">
+<!-- onload="alert('A página foi carregada completamente')" -->
+<!-- onresize="console.log('A página foi redimensionado')" -->
+
+	
 </body>
+</html>
