--- a/aula 9 31-07/eventos-click.html
+++ b/aula 9 31-07/eventos-click.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head class="cbl">
-    <title>Eventos de Click</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="script.js" media="screen" />
-    <script src="script.js" type="text/javascript"></script>
-   
+<html>
+<head>
+	<title>Eventos de click</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css">
+	<script src="js/script.js" type="text/javascript"></script>
+</head>
 <body>
-<div onclick= boasVindas()></div>
+		<div onmousedown=boasVindas()></div>
 
+		<!-- <div ondblclick=boasVindas() style="background: #CCC; height: 150px; width: 150px;"></div> -->
+		<!-- <div onmousedown=boasVindas() style="background: #CCC; height: 150px; width: 150px;"></div> -->
+		<!-- <div onmouseout=boasVindas() style="background: #CCC; height: 150px; width: 150px;"></div> -->
+		<!-- <div onmouseover=boasVindas() style="background: #CCC; height: 150px; width: 150px;"></div> -->
+
+</body>
+</html>
 
 
 
