--- a/aula 9 31-07/eventos-formulario.html
+++ b/aula 9 31-07/eventos-formulario.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head class="cbl">
-    <title>Eventos formulario</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="script.js" media="screen" />
-    <script src="script.js" type="text/javascript"></script>
-   <body>
-<input type="text" onfocus="console.log('O elemento ganhou o foco');">
-<!--onblur="alert"('o elemento perdeu foco do cursor')-->
-<!--onfocus - adicionado quando o elemento perde o foco do cursor-->
-<!--onchange - adicionado quando o elemento do foco é modificado-->
+<html>
+<head>
+	<title>Eventos Formulários</title>
+	<meta charset="utf-8">
+	<script type="text/javascript">
 
-
-
-<select onchange="alert(' a opcao foi alterada')";>
-<option value="1">Primeira opçao</option></select>
-<option value="2">opção</option></select>
-   </body>
+		// onfocus - acionado quando o elemento recebe o foco do cursor
+		// onblur - adicionado quando o elemento perde o foco do cursor
+		// onchange - adicionado quando o elemento do foco é modificado
+		
+	</script>
+</head>
+<body>
+	<!-- <input type="text" onblur="alert('O elemento perdeu o foco');" > -->
+	
+	<!-- onblur="alert('O elemento perdeu o foco');" -->
+	
+	<select onchange="alert('A opção foi alterada')">
+		<option value="1">Primeira opção</option>
+		<option value="2">Segunda opção</option>
+	</select>
+</body>
+</html>
